--- a/src/components/css/prefixed/layout.css
+++ b/src/components/css/prefixed/layout.css
@@ -142,7 +142,7 @@ a img {
 /* MIXINS */
 /* GLOBAL STYLES */
 body {
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-family: "Open Sans"; 
   line-height: 1.3;
 }
 
